added favicon and description

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Shop the latest fashion at Zanga — Nigeria's trusted online fashion market place. Enjoy secure checkout, fast delivery, and unbeatable deals."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="index.css" />
